[package]
name = "solana-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
borsh = { version = "1.5.4", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
anchor-client = { version = "0.30.1", features = ["async"] }
solana-transaction-status = "=1.18.26"
futures = "0.3.31"
solana-sdk = "=1.18.26"
tokio-tungstenite = "0.26.1"
log = "0.4.25"
bincode = "1.3.3"
raydium_amm = { version = "0.3.1", path = "raydium-amm-program" }
